# rusky-rust-discord-bot

./: .env  Cargo.toml  Readme.md  database.sqlite  database.sqlite-shm  database.sqlite-wal
migrations/: 1_globals.sql  20210906145552_initial_migration.sql
src/: main.rs
src/commands/: chatbot.rs  display.rs  join.rs  leave.rs  math.rs  meta.rs  mod.rs  owner.rs  play.rs  reply.rs  status.rs  table.rs
