[package]
name = "rust_starters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" , "sqlite", "offline" ] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.133"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.songbird]
#version = "0.2"
git = "https://github.com/serenity-rs/songbird"
branch = "next"
default-features = false
features = ["serenity-rustls", "gateway"]

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs"
branch = "master"
features = ["serenity"]
